// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> component should render correctly 1`] = `
<div
  className="app"
  data-theme="test-theme"
>
  <Header />
  <main
    className="appContent"
  >
    <Landing />
    <CookieDisclaimer />
    <Sections />
  </main>
  <Footer />
</div>
`;

exports[`<App/> component when the theme is dark should render correctly 1`] = `
<div
  className="app app__dark"
  data-theme="DARK_THEME"
>
  <Header />
  <main
    className="appContent appContent__dark"
  >
    <Landing />
    <CookieDisclaimer />
    <Sections />
  </main>
  <Footer />
</div>
`;
